--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nzbiranik/tree-view",
+    "name": "natkazb/tree-view",
     "description": "Yii2 view of tree structures",
     "type": "yii2-extension",
     "minimum-stability": "dev",
