--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "n.zbiranik",
-            "email": "n.zbiranik@gmail.com"
+            "email": "n.zbiranik@cdek.ru"
         }
     ],
     "require": {
